[package]
name = "myraft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = "0.6.1"
serde = "1.0.126"
bincode = "1.3.3"
anyhow = "1.0.41"
tokio = "1.8.1"
thiserror = "1.0.26"
sled = "0.34.6"
tonic = "0.5.0"
prost = "0.8.0"
log = "0.4.14"
zookeeper = "0.6.0"

[build-dependencies]
tonic-build = "0.5.0"
