[package]
name = "my_kv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myraft = { path = "../.." }
tokio = "1.8.1"
tonic = "0.5.0"
log = "0.4.14"
structopt = "0.3.22"
prost = "0.8.0"
bincode = "1.3.3"
serde = "1.0.126"
anyhow = "1.0.41"
env_logger = "0.8.4"
sled = "0.34.6"


[build-dependencies]
tonic-build = "0.5.0"

[[bin]]
name = "raft_server"
path = "src/server.rs"

[[bin]]
name = "raft_client"
path = "src/client.rs"
